# ECO-IA

./: AGENTS.md  API.md  ARCHITECTURE.md  Dockerfile  Dockerfile.agent  MONETIZATION.md  README.md  SETUP_OVHCLOUD.md  __init__.py  agent_base.py  agents.yaml  alembic.ini  auditor.py  backup.sh  billing.py  celery_app.py  cleaner.py  clients.py  communication.py  completion.py  config.yaml  config.yml  connection.py  crud.py  dashboard.py  docker-compose.yml  firewall.py  health_check.sh  hetzner.env.example  install.sh  intrusion_detector.py  llm_connector.py  main.py  manager.py  models.py  nginx.conf  optimizer.py  orchestrator.py  predictor.py  pricing.py  (+12 more)
